fixed right alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,10 @@ h1 {
 	background: rgba(255,255,255, 0.5);
 	-webkit-border-radius: 10px;
             border-radius: 10px;
+  
+}
+#menu li:last-child {
+  float: right;
 }
 #menu li.active{
 	background:#666;
